# tags

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SCHEMA.md  app.py  demo_content_formats.json  pyproject.toml  requirements.txt  run.sh  setup.sh
agents/: dewey.md
api/: README.md  db.py  loader.py  main.py  models.py
audience/: README.md  proposals.md  vocabulary.json
content_features/: README.md
content_formats/: README.md  vocabulary.md
content_warnings/: proposals.md  vocabulary.json  vocabulary.md
core/: __init__.py  classifier_assembler.py  json_loader.py  migrate_subject_classifier.py  pack_registry.py  run_state.py  subject_classifier.py
docs/: chisom-onboarding.md
genres/: README.md  vocabulary.json  vocabulary.md
literary_form/: vocabulary.md
literary_themes/: README.md  vocabulary.json
literary_tropes/: vocabulary.json
main_topics/: README.md  proposals.md
mappings/: content_formats.json  genres.json  subgenres.json
moods/: README.md  vocabulary.json
people/: README.md
rule_engine/: __init__.py  base.py  normalization.py
rule_packs/: __init__.py  audience.py  content_formats.py  genres.py  literary_form.py  literary_themes.py  literary_tropes.py  main_topics.py  moods.py  people.py  places.py  subgenres.py  subject_diagnostics.py  subject_migration.py  times.py  utils.py
rules/: __init__.py  lcsh_suffix_rule.py  mapping_rule.py  match_result.py  override_rule.py  passthrough_rule.py  prefix_rule.py
scripts/: README.md  analyze_genres.py  analyze_tags.py  analyze_unmapped.py  create_tags.py  (+6 more)
(+74 files in other folders)
